--- a/project1/project1.tex
+++ b/project1/project1.tex
@@ -49,7 +49,7 @@
 
 \begin{document}
 
-\lecture{Project 1: Warm-up of Statistical Machine Learning}{Yuan Yao}{Due: 23:59 Sunday 17 Sep, 2021}{4 Sep, 2023}
+\lecture{Project 1: Warm-up of Statistical Machine Learning}{Yuan Yao}{Due: 23:59 Tuesday 17 Sep, 2024}{4 Sep, 2024}
 
 %The problem below marked by $^*$ is optional with bonus credits. % For the experimental problem, include the source codes which are runnable under standard settings. 
 %
@@ -93,10 +93,10 @@ or \emph{technical report within 8 pages}, e.g. NIPS conference style (preferred
 \url{https://nips.cc/Conferences/2019/PaperInformation/StyleFiles}, 
 \end{center}
 with source codes such as Python (Jupyter) Notebooks with a detailed documentation.
-\item For Kaggle contests, please register your team with name in the format of mafs6010z\_lastname, so that we could easily find your results on Kaggle. For example, a team with Shawn Zhu and Kate Wong would be named by mafs6010z\_Zhu\_Wong.
+\item For Kaggle contests, please register your team with name in the format of mafs5440\_lastname, so that we could easily find your results on Kaggle. For example, a team with Shawn Zhu and Kate Wong would be named by mafs5440\_Zhu\_Wong.
 
 \item In the report, show your proposed scientific questions to explore and main results with a careful analysis supporting the results toward answering your problems. If possible, you should include your Kaggle contest score or rating in the report. Remember: scientific analysis and reasoning are more important than merely the performance tables. Separate source codes may be submitted through email as a GitHub link, or a zip file.    
-\item Submit your report by email or paper version no later than the deadline, to the following address  (\href{mailto:aifin.hkust@gmail.com}{aifin.hkust@gmail.com}) with a title ``\underline{MAFS6010z: Project 1}" % \#".  (\href{mailto:datascience.hw@gmail.com}{datascience.hw@gmail.com}) (\href{mailto:deeplearning.math@gmail.com}{deeplearning.math@gmail.com}) with Title: \underline{Math 6380P: Project 1}. % (\href{mailto:datascience\_hw@126.com}{datascience\_hw@126.com}). 
+\item Submit your report by email or paper version no later than the deadline, to the following address  (\href{mailto:aifin.hkust@gmail.com}{aifin.hkust@gmail.com}) with a title ``\underline{MAFS5440: Project 1}" % \#".  (\href{mailto:datascience.hw@gmail.com}{datascience.hw@gmail.com}) (\href{mailto:deeplearning.math@gmail.com}{deeplearning.math@gmail.com}) with Title: \underline{Math 6380P: Project 1}. % (\href{mailto:datascience\_hw@126.com}{datascience\_hw@126.com}). 
 
 
 \end{enumerate}
@@ -116,7 +116,7 @@ Visit the following website to join the competition.
 
 \url{https://www.kaggle.com/c/home-credit-default-risk/}
 
-{\bf Requirements}. For Kaggle contests, please register your team with name in the format of mafs6010z\_lastname, so that we could easily find your results on Kaggle. For example, a team with Shawn Zhu and Kate Wong would be named by mafs6010z\_Zhu\_Wong.
+{\bf Requirements}. For Kaggle contests, please register your team with name in the format of mafs5440\_lastname, so that we could easily find your results on Kaggle. For example, a team with Shawn Zhu and Kate Wong would be named by mafs5440\_Zhu\_Wong.
 
 
 %Below are two candidate datasets. Challenge marked by * above is only optional. 
