--- a/project3/project3.tex
+++ b/project3/project3.tex
@@ -97,7 +97,7 @@ with source codes such as Python (Jupyter) Notebooks with a detailed documentati
 
 \subitem(b) \emph{ONE short presentation video within 10 mins}, e.g. in Youtube or Bilibili link. You may submit your presentation slides together with the video link to help understanding. 
 
-\item For Kaggle contests, please register your team with name in the format of math6010z\_lastname, so that we could easily find your results on Kaggle. For example, a team with Shawn Zhu and Kate Wong would be named by math6010z\_Zhu\_Wong.
+\item For Kaggle contests, please register your team with name in the format of math5440\_lastname, so that we could easily find your results on Kaggle. For example, a team with Shawn Zhu and Kate Wong would be named by math5440\_Zhu\_Wong.
 
 \item In the report, show your proposed scientific questions to explore and main results with a careful analysis supporting the results toward answering your problems. If possible, you should include your Kaggle contest score or rating in the report. Remember: scientific analysis and reasoning are more important than merely the performance tables. Separate source codes may be submitted through email as a GitHub link, or a zip file.    
 \item Submit your report by email or paper version no later than the deadline, through Canvas. To ensure a smooth review process, each student in the group is required to submit a copy.
@@ -222,7 +222,7 @@ We provide you with backtesting script and several demos for reference, please r
 
 \subsection{Submission}
 You should submit your report and source material (a zip folder contains: your "strategy.py" and other facility files). For detailed information, please refer to demo files at the following link:\\
-\url{https://github.com/yao-lab/yao-lab.github.io/tree/master/aifin/2021/project3/demo} 
+\url{https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2021/project3/demo} 
 
 \subsection{Extension}
 If you want to explore the performance of your trading strategy in more cryptocurrencies and under different trading frequencies, we will also provide additional historical OHLCV data (including 'BTCUSD', 'BCHBTC', 'ETHUSD', 'LTCUSD' transaction data in the minute /15-minute/1-hour/1-day bar). Please contact us through email. Current data is still in preparation.
