--- a/2025/project1.tex
+++ b/2025/project1.tex
@@ -84,7 +84,7 @@
 This project as a warm-up aims to explore basic techniques in machine learning.
 \begin{enumerate}
 \item Pick up ONE (or more if you like) favourite dataset below to work. If you would like to work on a different problem outside the candidates we proposed, please email course instructor about your proposal.  
-\item Team work: we encourage you to form small team, up to {\bf THREE} persons per group, to work on the same problem. Each team just submit {\bf ONE} report, \emph{with a clear remark on each person's contribution}. The report can be in the format of either a \emph{poster}, e.g. 
+\item Team work: we encourage you to form small team, up to {\bf FOUR} persons per group, to work on the same problem. Each team just submit {\bf ONE} report, \emph{with a clear remark on each person's contribution}. The report can be in the format of either a \emph{poster}, e.g. 
 \begin{center}%\url{http://math.stanford.edu/~yuany/publications/poster_CleaveBioCPH2017_ForReview.pptx}
 \url{https://github.com/yuany-pku/2017_math6380/blob/master/project1/DongLoXia_poster.pptx}
 \end{center}
